--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,30 +13,29 @@
     <img class="pencil field" src="https://uploads-ssl.webflow.com/5a7edf0d432d43000114d381/5a99f48e3c10db0001e77da6_pencil.svg">
 
     <div class="firtsname field">
-    <%= f.label :first%><br />
-    <%= f.text_field :firstname, autofocus: true, autocomplete: "name" %>
+    <%= f.label :first_name%><br />
+    <%= f.text_field :firstname, autofocus: true, autocomplete: "name", class: "input_field" %>
   </div>
 
       <div class="lastname field">
-    <%= f.label :last %><br />
-    <%= f.text_field :lastname, autofocus: true, autocomplete: "name" %>
+    <%= f.label :last_name %><br />
+    <%= f.text_field :lastname, autofocus: true, autocomplete: "name", class: "input_field"  %>
   </div>
 
       <div class="email field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input_field" %>
   </div>
 
       <div class="contact field">
     <%= f.label :contact %><br />
-    <%= f.text_field :phonenumber, autofocus: true, autocomplete: "name" %>
+    <%= f.text_field :phonenumber, autofocus: true, autocomplete: "name", class: "input_field"  %>
   </div>
 
       <div class="d_o_b field">
     <%= f.label :Date_of_Birth %><br />
-    <%= f.date_field :dob, autofocus: true%>
+    <%= f.date_field :dob, autofocus: true, class: "input_field" %>
   </div>
-
  
 
   <div class="password field">
@@ -44,13 +43,23 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "input_field" %>
   </div>
 
   <div class="password_confirm field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input_field" %>
   </div>
+
+    <div class="field">
+      <%= f.check_box :agreement, class:"button"%>
+      <%= f.label :agreement do %>
+        <p id="terms_conditions" class="tooltip">Agree to Terms & Conditions<span class="tooltiptext">
+Foodtopia is not liable for anything that you may get using our services.<br> We would hope that all the our users would respect other people and treat how they would like to be treated. Saying that, if you get some produce that is off or gets you sick we are not responsible. <br>
+        -The Foodtopia Team</span></p>
+      <% end %>
+    </div>
+
 
   <div class="signup_button">
     <%= f.submit "Sign up" %>
@@ -58,7 +67,5 @@
 <br><br>
   <%= link_to 'Back', :root %>
   </div>
-
-
 
 </html>
