--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body class="navbar">
 <br>
 
-<div class="rectangle"></div>
+<div class="rectangle">
 
 <%# change to logged in homepage %>
 <% if user_signed_in? %>
@@ -33,6 +33,7 @@
 <% else %>
 <div id="landing_page_log_in" style="position: absolute; top: 10px; right:20px;"><%= link_to('Login', new_user_session_path)  %></div>
 <% end %>
+</div>
     <%= yield %>
   </body>
 </html>
