--- a/app/assets/stylesheets/charges.scss
+++ b/app/assets/stylesheets/charges.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the charges controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.links {
+    margin: 20px, 20px, 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+}
