--- a/app/assets/stylesheets/new_product.scss
+++ b/app/assets/stylesheets/new_product.scss
@@ -8,7 +8,7 @@
 }
 
 .mushroom {
-    // grid-area: 2/2;
+    grid-area: 2/2;
     display: inline-block;
     width: 100px;
     height: 100px;
@@ -19,7 +19,6 @@
 
 .submit {
     grid-area: 4/2;
-    color:green;
 }
 
 .des {
