--- a/app/assets/stylesheets/sign_up.scss
+++ b/app/assets/stylesheets/sign_up.scss
@@ -6,6 +6,7 @@ h2 {
     margin-top: 50px;
 }
 
+
 .grid {
     margin-top: 50px;
     margin-left: 200px;
@@ -16,8 +17,22 @@ h2 {
 }
 
 .field {
-    font-size: 14px;
+    font-size: 16px;
 }
+
+.input_field {
+    background: #82e380;
+    font-family: futura;
+    font-size: 14px;
+    color: #71816D;
+    border: #71816D;
+    border-radius: 5px;
+}
+
+.input_field:focus {
+    outline: none;
+  }
+
 
 .pencil {
     grid-area: 2/2;
@@ -55,4 +70,30 @@ h2 {
 
 .signup_button {
     grid-area: 4/2;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted #71816D;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 400px;
+    height: 130px;
+    background-color: #71816D;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    left: 50%; 
+    margin-left: -210px;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
 }
