--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -14,9 +14,9 @@
       </ul>
     </div>
   <% end %>
+<img class="mushroom" src="https://uploads-ssl.webflow.com/5a7edf0d432d43000114d381/5a99c06e08aff700015523f8_mushroom.svg">
 
 <div class="grid">
-
 
   <div class="field">
     <%= form.label :title %> <br>
@@ -51,25 +51,7 @@
   <div class="field">
     <%= form.label :food_category %> <br>
     <%= form.text_field :food_category, class:"input_field" %>
-        <%# <select>
-        <option value="fruits">Fruits</option>
-        <option value="vegetables">Vegetables</option>
-        <option value="baked goods">Baked Goods</option>
-        <option value="herbs/spices">Herbs/Spices</option>
-        <option value="meats">Meats</option>
-        <option value="condiments">Condiments</option>
-        <option value="dairy">Dairy</option>
-        <option value="animal produce">Animal Produce</option>
-      </select> %> 
   </div>
-
-  <%# <div class="field"> 
-        <select>
-        <option value="none">None</option>
-        <option value="vegetarian">Vegetarian</option>
-        <option value="vegan">Vegan</option>
-        </select> 
-  </div> %>
 
   <div class="field">
     <%= form.label :image %> <br>
